--- a/generator-tekton/generators/app/templates/pipeline/05-pipelinerun.yml
+++ b/generator-tekton/generators/app/templates/pipeline/05-pipelinerun.yml
@@ -22,6 +22,9 @@ spec:
   - name: docker-credentials
     secret:
       secretName: docker-credentials
+  - name: ssh-creds
+    secret:
+      secretName: git-sshkey-secret
 
   params:
   - name: repo-url
