--- a/generator-tekton/generators/app/templates/triggers/01-ssh-credentials.yml
+++ b/generator-tekton/generators/app/templates/triggers/01-ssh-credentials.yml
@@ -1,10 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: git-ssh-key-secret
+  name: git-sshkey-secret
   namespace: <%= pipelineName %>-namespace
-  annotations:
-    tekton.dev/git-0: github.com
-type: kubernetes.io/ssh-auth
 data:
-  ssh-privatekey: <%= sshprivatekey %>
+  id_rsa: <%= sshprivatekey %>
+  config: <%= ssh_config %>
