--- a/tekton-pipeline/triggers/03-rbac.yml
+++ b/tekton-pipeline/triggers/03-rbac.yml
@@ -4,7 +4,7 @@ metadata:
   name: go-pipeline-service-account
   namespace: go-pipeline-namespace
 secrets:
-  - name: git-ssh-key-secret
+  - name: git-sshkey-secret
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -106,3 +106,32 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: tekton-go-pipeline-kubectl-role
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: go-pipeline-namespace
+  name: tekton-role
+rules:
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get", "list", "watch"]
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: tekton-role-binding
+  namespace: go-pipeline-namespace
+subjects:
+- kind: ServiceAccount
+  name: go-pipeline-service-account
+  namespace: go-pipeline-namespace
+roleRef:
+  kind: Role
+  name: tekton-role
+  apiGroup: rbac.authorization.k8s.io
+
