--- a/tekton-pipeline/triggers/05-pipelinerun.yml
+++ b/tekton-pipeline/triggers/05-pipelinerun.yml
@@ -22,12 +22,15 @@ spec:
   - name: docker-credentials
     secret:
       secretName: docker-credentials
-
+  - name: ssh-creds
+    secret:
+      secretName: git-sshkey-secret
+  
   params:
   - name: repo-url
     value: git@github.com:Nandiniperikala/private.git
   - name: revision
     value: main 
   - name: image-reference
-    value: nandinikarthik14/go:latest
+    value: nandinikarthik14/new-go:latest
   serviceAccountName: go-pipeline-service-account
