--- a/generator-tekton/generators/app/templates/jib/pipeline/03-pipeline.yml
+++ b/generator-tekton/generators/app/templates/jib/pipeline/03-pipeline.yml
@@ -5,8 +5,7 @@ metadata:
   namespace: <%= pipelineName %>-namespace
 spec:
   description: | 
-    This pipeline clones a git repo, builds a Docker image with Kaniko and
-    pushes it to a registry
+    This pipeline clones a git repo and builds a Spring Boot
   params:
   - name: repo-url
     type: string
@@ -14,14 +13,16 @@ spec:
     type: string
   - name: image-reference
     type: string
-  
+  - name: maven-image-reference
+    type: string
+
   workspaces:
   - name: shared-data
   - name: docker-credentials
   - name: ssh-creds
 
   tasks:
-  - name: fetch-source
+  - name: clone-spring-repo
     taskRef:
       name: git-clone
     workspaces:
@@ -34,15 +35,17 @@ spec:
       value: $(params.repo-url)
     - name: revision
       value: $(params.revision)
-  - name: build-push
-    runAfter: ["fetch-source"]
+  - name: jib-maven
     taskRef:
-      name: kaniko
+      name: jib-maven
+    runAfter: ["clone-spring-repo"]
     workspaces:
     - name: source
       workspace: shared-data
-    - name: dockerconfig
-      workspace: docker-credentials
     params:
     - name: IMAGE
       value: $(params.image-reference)
+    - name: DIRECTORY
+      value: ./<%= directoryname %>
+    - name: MAVEN_IMAGE
+      value: $(params.maven-image-reference)
