--- a/generator-tekton/generators/app/templates/jib/triggers/02-rbac.yml
+++ b/generator-tekton/generators/app/templates/jib/triggers/02-rbac.yml
@@ -5,6 +5,7 @@ metadata:
   namespace: <%= pipelineName %>-namespace
 secrets:
   - name: git-sshkey-secret
+  - name: docker-credentials
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -111,15 +112,14 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: <%= pipelineName %>-namespace
   name: tekton-<%= pipelineName %>-ssh-role
+  namespace: <%= pipelineName %>-namespace
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
   verbs: ["get", "list", "watch"]
 
 ---
-
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
