--- a/generator-tekton/generators/app/templates/kaniko/pipeline/04-pipeline.yml
+++ b/generator-tekton/generators/app/templates/kaniko/pipeline/04-pipeline.yml
@@ -47,4 +47,4 @@ spec:
     - name: IMAGE
       value: $(params.image-reference)
     - name: DIRECTORY
-      value: ./<%= directoryname %>
+      value: ./<%= directoryName %>
