--- a/generator-tekton/generators/app/templates/kaniko/triggers/04-pipeline.yml
+++ b/generator-tekton/generators/app/templates/kaniko/triggers/04-pipeline.yml
@@ -46,3 +46,5 @@ spec:
     params:
     - name: IMAGE
       value: $(params.image-reference)
+    - name: DIRECTORY
+      value: ./<%= directoryName %>
