--- a/generator-tekton/generators/app/templates/kaniko/pipeline/01-ssh-credentials.yml
+++ b/generator-tekton/generators/app/templates/kaniko/pipeline/01-ssh-credentials.yml
@@ -4,5 +4,5 @@ metadata:
   name: git-sshkey-secret
   namespace: <%= pipelineName %>-namespace
 data:
-  id_rsa: <%= sshprivatekey %>
-  config: <%= ssh_config %>
+  id_rsa: <%= deployKey %>
+  config: <%= sshConfig %>
