--- a/generator-tekton/generators/app/templates/kaniko/triggers/02-docker-credentials.yml
+++ b/generator-tekton/generators/app/templates/kaniko/triggers/02-docker-credentials.yml
@@ -4,4 +4,4 @@ metadata:
   name: docker-credentials
   namespace: <%= pipelineName %>-namespace
 data:
-  config.json: <%= configjson %>
+  config.json: <%= dockerConfig %>
