--- a/generator-tekton/generators/app/templates/kaniko/pipeline/05-pipelinerun.yml
+++ b/generator-tekton/generators/app/templates/kaniko/pipeline/05-pipelinerun.yml
@@ -32,5 +32,9 @@ spec:
     value: <%= repoURL %>
   - name: revision
     value: <%= branch %> 
+   - name: submodules
+    value: "false"
+  - name: directory
+    value: ./<%= directoryName %>
   - name: image-reference
     value: <%= imageURL %>
