--- a/generator-tekton/generators/app/templates/kaniko/triggers/07-triggers.yml
+++ b/generator-tekton/generators/app/templates/kaniko/triggers/07-triggers.yml
@@ -9,6 +9,10 @@ spec:
     value: $(body.head_commit.id)
   - name: repo-url
     value: <%= repoURL %>
+  - name: submodules
+    value: "false"
+  - name: directory
+    value: ./<%= directoryName %>
   - name: image-reference
     value: <%= imageURL %>
   
@@ -25,6 +29,8 @@ spec:
     default: <%= branch %>
   - name: repo-url
   - name: image-reference
+  - name: submodules
+  - name: directory
   resourcetemplates:
   - apiVersion: tekton.dev/v1beta1
     kind: PipelineRun
@@ -55,5 +61,9 @@ spec:
         value: $(tt.params.repo-url)
       - name: revision
         value: $(tt.params.revision)
+      - name: submodules
+        value: $(tt.params.submodules)
+      - name: directory
+        value: $(tt.params.directory)
       - name: image-reference
         value: $(tt.params.image-reference)
