--- a/generator-tekton/generators/app/templates/kaniko/triggers/04-pipeline.yml
+++ b/generator-tekton/generators/app/templates/kaniko/triggers/04-pipeline.yml
@@ -12,6 +12,10 @@ spec:
     type: string
   - name: revision
     type: string
+  - name: submodules
+    type: string
+  - name: directory
+    type: string
   - name: image-reference
     type: string
   
@@ -34,6 +38,8 @@ spec:
       value: $(params.repo-url)
     - name: revision
       value: $(params.revision)
+    - name: submodules
+      value: $(params.submodules)
   - name: build-push
     runAfter: ["fetch-source"]
     taskRef:
@@ -47,4 +53,4 @@ spec:
     - name: IMAGE
       value: $(params.image-reference)
     - name: DIRECTORY
-      value: ./<%= directoryName %>
+      value: $(params.directory)
