--- a/generator-tekton/generators/app/templates/jib/triggers/04-event-listener.yml
+++ b/generator-tekton/generators/app/templates/jib/triggers/04-event-listener.yml
@@ -4,6 +4,9 @@ metadata:
   name: <%= pipelineName %>-eventlistener
   namespace: <%= pipelineName %>-namespace
 spec:
+  resources:
+    kubernetesResource:
+      serviceType: LoadBalancer
   serviceAccountName: <%= pipelineName %>-service-account
   triggers:
     - name: <%= pipelineName %>-trigger
