--- a/generator-tekton/generators/app/templates/jib/pipeline/02-rbac.yml
+++ b/generator-tekton/generators/app/templates/jib/pipeline/02-rbac.yml
@@ -133,3 +133,65 @@ roleRef:
   kind: Role
   name: tekton-<%= pipelineName %>-ssh-role
   apiGroup: rbac.authorization.k8s.io
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: tekton-<%= pipelineName %>-git-access
+  namespace: <%= pipelineName %>-namespace
+rules:
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["create", "get", "list", "delete"]
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: tekton-<%= pipelineName %>-git-access-binding
+  namespace: <%= pipelineName %>-namespace
+subjects:
+- kind: ServiceAccount
+  name: <%= pipelineName %>-service-account
+  namespace: <%= pipelineName %>-namespace
+roleRef:
+  kind: ClusterRole
+  name: tekton-<%= pipelineName %>-git-access
+  apiGroup: rbac.authorization.k8s.io
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: tekton-<%= pipelineName %>-workspace-access-role
+  namespace: <%= pipelineName %>-namespace
+rules:
+- apiGroups: [""]
+  resources: ["pods/exec", "pods/log"]
+  verbs: ["create", "get", "list", "watch", "update", "delete"]
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list", "exec"]
+- apiGroups: ["tekton.dev"]
+  resources: ["pipelineruns", "tasks", "taskruns"]
+  verbs: ["get", "list", "watch"]
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: tekton-<%= pipelineName %>-workspace-access-binding
+  namespace: <%= pipelineName %>-namespace
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: tekton-<%= pipelineName %>-workspace-access-role
+subjects:
+- kind: ServiceAccount
+  name: ticgo-pipeline-service-account
+  namespace: <%= pipelineName %>-namespace
