--- a/generator-tekton/generators/app/templates/kaniko/triggers/02-rbac.yml
+++ b/generator-tekton/generators/app/templates/kaniko/triggers/02-rbac.yml
@@ -5,6 +5,7 @@ metadata:
   namespace: <%= pipelineName %>-namespace
 secrets:
   - name: git-sshkey-secret
+  - name: docker-credentials
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -119,6 +120,7 @@ rules:
   verbs: ["get", "list", "watch"]
 
 ---
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -132,3 +134,65 @@ roleRef:
   kind: Role
   name: tekton-<%= pipelineName %>-ssh-role
   apiGroup: rbac.authorization.k8s.io
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: tekton-<%= pipelineName %>-git-access
+  namespace: <%= pipelineName %>-namespace
+rules:
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["create", "get", "list", "delete"]
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: tekton-<%= pipelineName %>-git-access-binding
+  namespace: <%= pipelineName %>-namespace
+subjects:
+- kind: ServiceAccount
+  name: <%= pipelineName %>-service-account
+  namespace: <%= pipelineName %>-namespace
+roleRef:
+  kind: ClusterRole
+  name: tekton-<%= pipelineName %>-git-access
+  apiGroup: rbac.authorization.k8s.io
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: tekton-<%= pipelineName %>-workspace-access-role
+  namespace: <%= pipelineName %>-namespace
+rules:
+- apiGroups: [""]
+  resources: ["pods/exec", "pods/log"]
+  verbs: ["create", "get", "list", "watch", "update", "delete"]
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list", "exec"]
+- apiGroups: ["tekton.dev"]
+  resources: ["pipelineruns", "tasks", "taskruns"]
+  verbs: ["get", "list", "watch"]
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: tekton-<%= pipelineName %>-workspace-access-binding
+  namespace: <%= pipelineName %>-namespace
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: tekton-<%= pipelineName %>-workspace-access-role
+subjects:
+- kind: ServiceAccount
+  name: ticgo-pipeline-service-account
+  namespace: <%= pipelineName %>-namespace
