--- a/generator-tekton/generators/app/templates/kaniko/triggers/06-triggers.yml
+++ b/generator-tekton/generators/app/templates/kaniko/triggers/06-triggers.yml
@@ -11,10 +11,12 @@ spec:
     value: <%= repoURL %>
   - name: submodules
     value: "false"
-  - name: directory
-    value: ./<%= directoryName %>
   - name: image-reference
     value: <%= imageURL %>
+  - name: context
+    value: <%= PathtoContext %>
+  - name: dockerfile
+    value: $(workspaces.source.path)/<%= PathtoDockerfile %>
   
 ---
 
@@ -31,6 +33,8 @@ spec:
   - name: image-reference
   - name: submodules
   - name: directory
+  - name: dockerfile
+  - name: context
   resourcetemplates:
   - apiVersion: tekton.dev/v1beta1
     kind: PipelineRun
@@ -40,6 +44,9 @@ spec:
       serviceAccountName: <%= pipelineName %>-service-account
       pipelineRef:
         name: <%= pipelineName %>
+      podTemplate:
+        securityContext:
+          fsGroup: 65532 
       workspaces:
       - name: shared-data
         volumeClaimTemplate:
@@ -48,7 +55,7 @@ spec:
             - ReadWriteOnce
             resources:
               requests:
-                storage: 1Gi
+                storage: 2Gi
       - name: docker-credentials
         secret:
           secretName: docker-credentials
@@ -63,7 +70,9 @@ spec:
         value: $(tt.params.revision)
       - name: submodules
         value: $(tt.params.submodules)
-      - name: directory
-        value: $(tt.params.directory)
       - name: image-reference
         value: $(tt.params.image-reference)
+      - name: context
+        value: $(tt.params.context)
+      - name: dockerfile
+        value: $(tt.params.dockerfile)
