jib files modified

--- a/generator-tekton/generators/app/templates/kaniko/pipeline/04-pipelinerun.yml
+++ b/generator-tekton/generators/app/templates/kaniko/pipeline/04-pipelinerun.yml
@@ -37,6 +37,6 @@ spec:
   - name: context
     value: <%= PathtoContext %>
   - name: dockerfile
-    value: $(workspaces.source.path)/<%= PathtoDockerfile %>
+    value: <%= PathtoDockerfile %>
   - name: image-reference
     value: <%= imageURL %>
